--- a/css_styling.css
+++ b/css_styling.css
@@ -12,6 +12,7 @@ body {
 .title {
         	font-family: {TitleFont}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
         	font-weight: bold;
+        	font-size:48px;
         }
 
 
