editing resume and css style

--- a/css_styling.css
+++ b/css_styling.css
@@ -11,7 +11,7 @@ body {
 
 .title {
         	font-family: {TitleFont}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
-        	font-weight: bold 900;
+        	font-weight: bold;
         }
 
 
