--- a/css_styling.css
+++ b/css_styling.css
@@ -8,12 +8,10 @@ body {
         background-repeat: no-repeat; 
         background-attachment: fixed;    
 	}
-/*
+
 #title{
-        	font-family: {TitleFont}, "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
+        	font-family: "Helvetica Neue";
         	font-weight: bold;
         	font-size:56px;
       }
-
-*/
 
