editing resume and css style

--- a/css_styling.css
+++ b/css_styling.css
@@ -9,7 +9,7 @@ body {
         background-attachment: fixed;    
 	}
 
-#title{
+title{
         	font-family: "Helvetica Neue";
         	font-weight: bold;
         	font-size:56px;
