--- a/css_styling.css
+++ b/css_styling.css
@@ -62,7 +62,9 @@ h2 {
 	font-weight: 500;
 	line-height: 15.4px;
 	text-indent: 80px;
+	
 	color:OrangeRed;
+	width:30%;
 	text-shadow: 3px 2px yellow;
     background: rgba(255, 215, 0, .50);
     padding: 15px 10px 1px 10px;
