--- a/css_styling.css
+++ b/css_styling.css
@@ -17,6 +17,7 @@ body {
 
 #content {
 	margin-top: 200px;
+  text-align: center;
 }
 
 h1	{
@@ -38,20 +39,29 @@ h1	{
 
 #mail{
 		font-family: "Kingc";
-        font-weight: bolder;
-        font-size:36px;
-        text-align: center;
-        text-shadow: 5px 5px midnightblue;
-        color:lightCyan;
-      	background: rgba(70, 130, 180, .70);
-      	position:fixed;
-      	z-index:100000;
-      	width:100%;
-      	top:100px;
-      	height:50px;
-      	margin:0px auto;
-      	padding-bottom: 10px;
-      }
+    font-weight: bolder;
+    font-size:36px;
+    text-align: center;
+    text-shadow: 5px 5px midnightblue;
+    color:lightCyan;
+  	background: rgba(70, 130, 180, .70);
+  	position:fixed;
+  	z-index:100000;
+  	width:100%;
+  	top:100px;
+  	height:50px;
+  	margin:0px auto;
+  	padding-bottom: 10px;
+}
+
+.tabLeft{
+  margin-top: -42px;
+  margin-left: 1000px;
+}
+
+.tabRight{
+  margin-right: 1000px
+}
 
 h2 {
 	font-family: consolas;
@@ -61,13 +71,12 @@ h2 {
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 15.4px;
-	text-indent: 80px;
 	
 	color:OrangeRed;
 	width:30%;
 	text-shadow: 3px 2px yellow;
-    background: rgba(255, 215, 0, .50);
-    padding: 15px 10px 1px 10px;
+   background: rgba(255, 215, 0, .50);
+   padding: 15px 10px 1px 10px;
 }
 
 h3 {
@@ -80,8 +89,8 @@ h3 {
 	line-height: 40px;
 	color:CornSilk;
 	text-shadow: 1px 2px plum;
-    background: rgba(25, 26, 112, .50);
-    padding: 15px 10px 15px 10px;
+  background: rgba(25, 26, 112, .50);
+  padding: 15px 10px 15px 10px;
 }
 
 .myh3 {
@@ -135,4 +144,18 @@ hr {
     border-style: inset;
     border-width: 5px;
     color: orangeRed;
+}
+
+img {
+    width:25%;
+    float: left;
+    padding-right: 40px;
+    padding-top: 15px;
+    margin-left: 15px;
+}
+
+.Rimg {
+    width:200%;
+    margin-top: 15px;
+    margin-left: 500px;
 }
