Changing truetype extension to lowercase
Changing truetype extension to lowercase in css

--- a/css_styling.css
+++ b/css_styling.css
@@ -22,12 +22,12 @@ body {
 
 @font-face {
   font-family:"Rlyehian";
-  src: url("Rlyehian.TTF");
+  src: url("Rlyehian.ttf");
 }
 
 @font-face {
   font-family:"RlyehianBase";
-  src: url("RlyehianBase.TTF");
+  src: url("RlyehianBase.ttf");
 }
 
 #content {
